--- a/styles/style.css
+++ b/styles/style.css
@@ -271,6 +271,12 @@ ol {
   color: #545050;
 }
 
+.content__list{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
 .content__list-container {
   display: grid;
   position: relative;
@@ -306,7 +312,7 @@ ol {
 }
 
 .content__card-link:active {
-  background-color: #545050;
+  background-color: #545050; /*цвет не заимствует белый цвет при клике*/
 }
 
 .content__video-card {
@@ -315,7 +321,6 @@ ol {
   align-items: flex-start;
   justify-content: space-between;
   width: 390px;
-  padding-bottom: 30px;
 }
 
 .content__video-card:focus {
@@ -335,7 +340,6 @@ ol {
 
 .content__video-card-title {
   width: 196px;
-  height: 35px;
   padding-top: 2px;
   font-family: "Oswald", sans-serif;
   font-style: normal;
@@ -344,7 +348,7 @@ ol {
   white-space: nowrap;
   font-weight: 700;
   font-size: 30px;
-  line-height: 100%;
+  line-height: 108%;
   text-transform: uppercase;
   color: #ffffff;
 }
@@ -374,6 +378,7 @@ ol {
 
 .more-button {
   background-color: transparent;
+  margin-top: 30px;
   width: 100%;
   height: 34px;
   cursor: pointer;
